# cufft

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  Setup.hs  configure.ac  cufft.buildinfo.in  cufft.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml
Foreign/CUDA/: FFT.hs
Foreign/CUDA/FFT/: Error.chs  Execute.chs  Plan.chs  Stream.chs
Foreign/CUDA/FFT/Internal/: C2HS.hs
cbits/: wrap.h
