name:                   cufft
version:                0.7.5.0
synopsis:               Haskell bindings for the CUFFT library
description:
    This library contains FFI bindings to the CUFFT library, which provides
    highly optimised, FFTW compatible, Fast-Fourier Transform (FFT)
    implementations for NVIDIA GPUs. The CUFFT library is part of the CUDA
    developer toolkit.
    .
    <http://developer.nvidia.com/cuda-downloads>
    .
    The setup script will look for your CUDA installation by checking, in the
    following order:
    .
      1. The @CUDA_PATH@ environment variable
      2. Searching for @nvcc@ on the @PATH@
      3. Checking at @\/usr\/local\/cuda@
      4. @CUDA_PATH_Vx_y@ environment variable, for recent CUDA toolkit versions x.y
    .
    This release tested with versions 6.5, 7.0, and 7.5 of the CUDA toolkit.
    .

homepage:               http://github.com/robeverest/cufft
license:                BSD3
license-file:           LICENSE
author:                 Robert Clifton-Everest, Trevor L. McDonell
maintainer:             Robert Clifton-Everest <robertce@cse.unsw.edu.au>
homepage:               https://github.com/robeverest/cufft
bug-reports:            https://github.com/robeverest/cufft/issues
category:               Foreign
build-type:             Custom
cabal-version:          >= 1.22
tested-with:            GHC >= 7.6

Extra-tmp-files:        cufft.buildinfo.generated

Extra-source-files:     cbits/wrap.h
                        README.md

custom-setup
  setup-depends:
      base              >= 4.6
    , Cabal             >= 1.22
    , directory         >= 1.0
    , filepath          >= 1.0
    , template-haskell

library
  exposed-modules:      Foreign.CUDA.FFT

  other-modules:        Foreign.CUDA.FFT.Error
                        Foreign.CUDA.FFT.Execute
                        Foreign.CUDA.FFT.Plan
                        Foreign.CUDA.FFT.Stream
                        Foreign.CUDA.FFT.Internal.C2HS

  build-depends:
      base              == 4.*
    , cuda              >= 0.6.6

  build-tools:          c2hs >= 0.21
  ghc-options:          -Wall -O2 -funbox-strict-fields -fwarn-tabs

  include-dirs:         .
  default-language:     Haskell98

Source-repository head
  Type:                 git
  Location:             git://github.com/robeverest/cufft.git

-- vim: nospell

